--- a/curlyhairapp/css/style.css
+++ b/curlyhairapp/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2.2em;
   font-weight: 300;
   letter-spacing: 3px;
 }
@@ -32,6 +32,11 @@ h2 {
   font-size: 1em;
   font-weight: 300;
   letter-spacing: 3px;
+}
+h3 {
+  font-size: 1.2em;
+  font-weight: 200;
+
 }
 
 div {
@@ -45,9 +50,10 @@ div {
 
 .bottomdark {
   width: 35%;
-  height: 10%;
+  height: auto;
   background-color: var(--moerkroed);
   border-radius: 15px;
+  bo
   box-shadow: 3px 5px var(--shadow);
 }
 
@@ -85,6 +91,7 @@ nav {
   line-height: 0px !important;
 }
 
+
 /* Style the links inside the navigation bar */
 .tabbar a {
   display: inline-block;
@@ -98,7 +105,7 @@ nav {
 
 .tabbar a img {
   width: 30%;
-  padding: 1%;
+  padding: 2%;
 }
 
 .tabbar a p {
@@ -116,16 +123,20 @@ nav {
 }
 
 /* ---------- page styling ---------- */
-.page {
+.page, .page div  {
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
 }
 
+
+
 /* ---------- Forside/test produkter ---------- */
 #tekstbox1 {
-  width: 80%;
+margin-top: 70px;
+width: 80%;
+
 }
 
 #tekstbox1 h1 {
@@ -134,12 +145,12 @@ nav {
 
 #indtastningsfelt {
   border-style: solid;
-  border-color: #f1f1f4;
+  border-color: var(----light-red);
   border-radius: 15px;
   box-shadow: 3px 5px var(--shadow);
   padding: 5%;
   width: 80%;
-  height: 40%;
+  height: auto;
 }
 
 #qr {
