--- a/curlyhairapp/css/style.css
+++ b/curlyhairapp/css/style.css
@@ -41,8 +41,16 @@ h3 {
 
 div {
   align-items: center;
+  width: 100%;
 }
 
+form {
+  width: 100%;
+}
+
+label {
+  width: 100%;
+}
 .background {
   background: linear-gradient(0deg, rgba(248, 234, 238, 1) 20%, rgba(255, 255, 255, 1) 100%);
   height: 812px;
@@ -145,12 +153,17 @@ width: 80%;
 
 #indtastningsfelt {
   border-style: solid;
-  border-color: var(----light-red);
+  border-color: var(--light-red);
   border-radius: 15px;
   box-shadow: 3px 5px var(--shadow);
   padding: 5%;
   width: 80%;
   height: auto;
+  align-items: center;
+}
+
+#indtastningsfelt:active {
+color: var(--text-color-dark)
 }
 
 #qr {
@@ -160,6 +173,29 @@ width: 80%;
 #qr p {
   color: var(--text-color-dark);
 }
+
+
+
+/* ---------- ingredienser ---------- */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 100%;
+  padding: 10px;
+}
+
+
+.grid-container>article {
+  text-align: center;
+  padding: 10px;
+}
+
+.grid-container>article img {
+  max-width: 300px;
+  width: 100%;
+  margin-bottom: 1em;
+}
+
 
 /* ---------- logo styling ---------- */
 .logo {
