--- a/curlyhairapp/css/style.css
+++ b/curlyhairapp/css/style.css
@@ -1,4 +1,4 @@
-/* ---------- root variables ---------- */
+/* ============= root variables =========== */
 :root {
   --moerkroed: #b999a0;
   --light-red: #f0eaee;
@@ -6,26 +6,28 @@
   --light-grey: #f1f1f4;
   --text-color-light: #f1f1f1;
   --text-color-dark: #b999;
-  --shadow: #707070;
+  --shadow: #AFADAD;
   --font-family: roberto, Arial, sans-serif;
 }
 
-/* ---------- general styling ---------- */
+/* ============== general styling ========== */
 html {
   color: var(--text-color-dark);
   font-family: var(--font-family);
-  height: 100%;
-  width: auto;
+  height: auto;
+  width: 100%;
 }
 
 body {
   margin: 0;
+  background: linear-gradient(0deg, rgba(248, 234, 238, 1) 20%, rgba(255, 255, 255, 1) 100%);
+  background-size: 100%;
 }
 
 h1 {
   font-size: 2.2em;
   font-weight: 300;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
 }
 
 h2 {
@@ -33,36 +35,31 @@ h2 {
   font-weight: 300;
   letter-spacing: 3px;
 }
+
 h3 {
   font-size: 1.2em;
   font-weight: 200;
-
 }
 
-div {
-  align-items: center;
-  width: 100%;
+h4 {
+  font-size: 1.2em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-form {
-  width: 100%;
+p {
+  font-size: 1em;
+  font-weight: 100;
 }
 
-label {
-  width: 100%;
-}
-.background {
-  background: linear-gradient(0deg, rgba(248, 234, 238, 1) 20%, rgba(255, 255, 255, 1) 100%);
-  height: 812px;
-}
-
+/* --------- KNAPPER -------- */
 .bottomdark {
   width: 35%;
   height: auto;
   background-color: var(--moerkroed);
   border-radius: 15px;
-  bo
-  box-shadow: 3px 5px var(--shadow);
+  box-shadow: 2px 3px var(--shadow);
+  margin: 5% 0 10% 0;
 }
 
 .bottomdark p {
@@ -80,23 +77,7 @@ label {
 .bottomlight p {
   color: var(--text-color-dark);
 }
-/* ---------- topbar styling ---------- */
-.topbar {
-  background-color: var(--green);
-  color: var(--text-color-light);
-  padding: 13.5px;
-  text-transform: uppercase;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
-}
 
-.topbar h2 {
-  margin: 0;
-  font-weight: 300;
-}
 /* ---------- TABBAR STYLING ---------- */
 .tabbar {
   background-color: var(--moerkroed);
@@ -105,12 +86,18 @@ label {
   left: 0;
   right: 0;
   z-index: 9999;
+  width: 100vw;
+  padding-top: 15px;
+  height: 80px;
+  vertical-align: middle;
+  border-top-left-radius: 90% 10%;
+  border-top-right-radius: 90% 10%;
+  text-align: center;
 }
 
 nav {
   line-height: 0px !important;
 }
-
 
 /* Style the links inside the navigation bar */
 .tabbar a {
@@ -121,7 +108,7 @@ nav {
   text-decoration: none;
   font-size: 0.8em;
   letter-spacing: 0.1em;
-text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .tabbar a img {
@@ -141,63 +128,66 @@ text-transform: uppercase;
 
 /* Add a color to the active/current link */
 .tabbar a.active {
-  background-color: var(--light-green);
-  color: var(--text-color-light);
-}
-
-/* ---------- page styling ---------- */
-.page {
-  display: none;
-  /*min heigh is screen heigh minus height of tab and top bar */
-  min-height: calc(100vh - 110px);
-  background: var(--light-grey);
-  animation: fadeIn 0.4s;
-  /* padding equals height of tabbar and topbar */
-  padding: 55px 0;
-}
-
-/* ---------- Forside/test produkter ---------- */
-#tekstbox1 {
-margin-top: 70px;
-width: 80%;
-
-}
-
-#tekstbox1 h1 {
-  text-shadow: 1px 0.5px var(--shadow);
-}
-
-#indtastningsfelt {
-  border-style: solid;
-  border-color: var(--light-red);
-  border-radius: 15px;
-  box-shadow: 3px 5px var(--shadow);
-  padding: 5%;
-  width: 80%;
-  height: auto;
-  align-items: center;
-}
-
-#indtastningsfelt:active {
-color: var(--text-color-dark)
-}
-
-#qr {
-  margin: 5%;
-}
-
-#qr p {
+  background-color: var(--light-grey);
   color: var(--text-color-dark);
 }
 
-
-
-/* ---------- Product side---------- */
-
-.jep {
-  background-color: grey;
+/* =========== PAGES ============= */
+.page {
+  display: none;
+  /*min heigh is screen heigh minus height of tab and top bar */
+  min-height: calc(100vh);
+  animation: fadeIn 0.4s;
+  align-items: center;
 }
 
+#help {
+  display: block;
+  float: right;
+  padding: 5% 5%;
+}
+
+/* ---------- Forside/test produkter ---------- */
+#test {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#tekstbox1 {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  padding: 5%;
+  text-align: center;
+}
+
+form {
+  width: 100%;
+}
+
+#indtastningsfelt {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  text-align: center;
+}
+
+#textarea1 {
+  border-radius: 15px;
+  border-color: white;
+  box-shadow: 3px 3px var(--shadow);
+  background-color: white;
+}
+
+#qr {
+  display: flex;
+  width: 20%;
+  text-align: center;
+}
+
+/* ---------- Product side---------- */
 /* Grid container */
 .grid-container {
   display: grid;
@@ -265,60 +255,10 @@ input, select {
   border: 0;
   border-radius: 0;
 }
+
 /* ---------- logo styling ---------- */
 .logo {
   margin: 2em auto;
   width: 100%;
   max-width: 300px;
 }
-
-/* ---------- loader styling ---------- */
-#loader {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 9999999999;
-  overflow: hidden;
-  background: var(--loader-background-color);
-  text-align: center;
-}
-
-.spinner {
-  border: 5px solid var(--light-grey);
-  border-radius: 50%;
-  border-top: 5px solid var(--light-green);
-  width: 50px;
-  height: 50px;
-  -webkit-animation: spin 1s linear infinite;
-  /* Safari */
-  animation: spin 1s linear infinite;
-  display: inline-block;
-  vertical-align: middle;
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.hide {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s 0.4s, opacity 0.4s linear;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-/* ---------- Home page ---------- */
-@media screen and (min-width: 415px) and (max-width: 728px) {}
